--- a/llm-server/requirements.txt
+++ b/llm-server/requirements.txt
@@ -1,7 +1,2 @@
-flask==3.0.0
-flask-cors
-requests
-numpy
-python-dotenv
-google-generativeai
-google.genai
+python-dotenv>=1.0.0
+google-generativeai>=0.3.0
